[package]
name = "tiny-dioxus"
version = "0.1.0"
authors = ["Evan Almloff <ealmlof1@stumail.jccc.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { path = "/Users/evanalmloff/Desktop/Github/dioxus/packages/dioxus" }
# dioxus-web = { path = "/Users/evanalmloff/Desktop/Github/dioxus/packages/web", default-features = false }
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus", default-features = false }
# dioxus = "0.4.0"
# dioxus-web = { version = "0.4.0", features = ["file_engine"], default-features = false }
